--- a/PlannerAppClient/PlannerAppClient.csproj
+++ b/PlannerAppClient/PlannerAppClient.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0" PrivateAssets="all" />
     <PackageReference Include="Radzen.Blazor" Version="2.11.12" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
+    <PackageReference Include="Tewr.Blazor.FileReader" Version="2.0.0.20200" />
   </ItemGroup>
 
   <ItemGroup>
